--- a/DailyBank/src/main/resources/application/view/comptesmanagement.fxml
+++ b/DailyBank/src/main/resources/application/view/comptesmanagement.fxml
@@ -23,32 +23,37 @@
             </Button>
          </bottom>
          <center>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <VBox alignment="CENTER" prefHeight="264.0" prefWidth="190.0" BorderPane.alignment="CENTER">
                <children>
                   <GridPane alignment="CENTER" prefHeight="178.0" prefWidth="187.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Button fx:id="btnVoirOpes" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doVoirOperations" text="Voir opérations">
                            <GridPane.margin>
-                              <Insets bottom="10.0" top="10.0" />
+                              <Insets bottom="5.0" top="5.0" />
                            </GridPane.margin>
+                           <padding>
+                              <Insets bottom="5.0" />
+                           </padding>
                         </Button>
                         <Button fx:id="btnModifierCompte" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doModifierCompte" text="Modifier compte" GridPane.rowIndex="1">
                            <GridPane.margin>
-                              <Insets bottom="10.0" top="10.0" />
+                              <Insets bottom="5.0" top="5.0" />
                            </GridPane.margin>
                         </Button>
                         <Button fx:id="btnCloturerCompte" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doCloturerCompte" text="Cloturer compte" GridPane.rowIndex="2">
                            <GridPane.margin>
-                              <Insets bottom="10.0" top="10.0" />
+                              <Insets bottom="5.0" top="5.0" />
                            </GridPane.margin>
                         </Button>
                         <Button mnemonicParsing="false" text="Button" visible="false" GridPane.rowIndex="1">
@@ -56,8 +61,24 @@
                               <Insets bottom="10.0" top="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnSupprCompte" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doSupprimerCompte" text="Supprimer compte" GridPane.rowIndex="3" />
+                        <Button fx:id="btnSupprCompte" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doSupprimerCompte" text="Supprimer compte" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" top="5.0" />
+                           </GridPane.margin></Button>
+                        <Button fx:id="btnVoirPrel" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doVoirPrelevement" text="Voir prélèvements" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" top="5.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button fx:id="btnSimulEmpr" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doSimulerEmprunt" text="Simuler emprunts" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" top="5.0" />
+                           </GridPane.margin>
+                        </Button>
                      </children>
+                     <VBox.margin>
+                        <Insets top="-20.0" />
+                     </VBox.margin>
                   </GridPane>
                </children>
                <BorderPane.margin>
