--- a/DailyBank/src/main/resources/application/view/operationsmanagement.fxml
+++ b/DailyBank/src/main/resources/application/view/operationsmanagement.fxml
@@ -59,7 +59,7 @@
                               <Insets bottom="5.0" top="5.0" />
                            </padding>
                         </Button>
-                        <Button fx:id="btnDebitExep1" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doDebitExep" text="Débit exeptionnel" GridPane.rowIndex="3">
+                        <Button fx:id="btnDebitExep" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doDebitExep" text="Débit exeptionnel" GridPane.rowIndex="3">
                            <padding>
                               <Insets bottom="5.0" top="5.0" />
                            </padding>
