--- a/DailyBank/src/main/resources/application/view/operationsmanagement.fxml
+++ b/DailyBank/src/main/resources/application/view/operationsmanagement.fxml
@@ -54,12 +54,12 @@
                               <Insets bottom="5.0" top="5.0" />
                            </padding>
                         </Button>
-                        <Button fx:id="btnRelevePdf" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doRelevePdf" text="relevé pdf" GridPane.rowIndex="4">
+                        <Button fx:id="btnRelevePdf" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doRelevePdf" text="Relevé pdf" GridPane.rowIndex="4">
                            <padding>
                               <Insets bottom="5.0" top="5.0" />
                            </padding>
                         </Button>
-                        <Button fx:id="btnDebitExep" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doDebitExep" text="Débit exeptionnel" GridPane.rowIndex="3">
+                        <Button fx:id="btnDebitExep" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doDebitExep" text="Débit exceptionnel" GridPane.rowIndex="3">
                            <padding>
                               <Insets bottom="5.0" top="5.0" />
                            </padding>
