--- a/DailyBank/src/main/resources/application/view/empruntsmanagement.fxml
+++ b/DailyBank/src/main/resources/application/view/empruntsmanagement.fxml
@@ -12,16 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.ComptesManagementController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.EmpruntManagementController">
    <right>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <bottom>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doNouveauCompte" text="Nouveau compte" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
-               </BorderPane.margin>
-            </Button>
-         </bottom>
          <center>
             <VBox alignment="CENTER" prefHeight="264.0" prefWidth="190.0" BorderPane.alignment="CENTER">
                <children>
@@ -30,43 +23,23 @@
                         <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Button fx:id="btnVoirOpes" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doVoirOperations" text="Voir opérations">
-                           <GridPane.margin>
-                              <Insets bottom="5.0" top="5.0" />
-                           </GridPane.margin>
-                           <padding>
-                              <Insets bottom="5.0" />
-                           </padding>
-                        </Button>
-                        <Button fx:id="btnModifierCompte" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doModifierCompte" text="Modifier compte" GridPane.rowIndex="1">
+                        <Button fx:id="btnSimulerEmprunt" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doSimulerEmprunt" text="Simuler emprunt" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets bottom="5.0" top="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnCloturerCompte" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doCloturerCompte" text="Cloturer compte" GridPane.rowIndex="2">
+                        <Button fx:id="btnSupprimerEmprunt" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doSupprimerEmprunt" text="Supprimer emprunt" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets bottom="5.0" top="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnSupprCompte" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doSupprimerCompte" text="Supprimer compte" GridPane.rowIndex="3">
-                           <GridPane.margin>
-                              <Insets bottom="5.0" top="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button fx:id="btnVoirPrel" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doVoirPrelevement" text="Voir prélèvements" GridPane.rowIndex="4">
-                           <GridPane.margin>
-                              <Insets bottom="5.0" top="5.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button fx:id="btnSimulEmpr" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doSimulerEmprunt" text="Simuler emprunts" GridPane.rowIndex="5">
+                        <Button fx:id="btnActualiser" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#doActualiser" text="Actualiser liste">
                            <GridPane.margin>
                               <Insets bottom="5.0" top="5.0" />
                            </GridPane.margin>
@@ -89,7 +62,7 @@
          <bottom>
             <HBox BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" onAction="#doCancel" prefHeight="31.0" prefWidth="214.0" text="Retour gestion clients">
+                  <Button mnemonicParsing="false" onAction="#doCancel" prefHeight="31.0" prefWidth="214.0" text="Retour ">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" top="10.0" />
                      </HBox.margin>
@@ -98,7 +71,7 @@
             </HBox>
          </bottom>
          <center>
-            <ListView fx:id="lvComptes" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <ListView fx:id="lvEmprunts" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets bottom="10.0" left="10.0" right="20.0" top="10.0" />
                </BorderPane.margin>
@@ -112,7 +85,7 @@
    <top>
       <AnchorPane styleClass="borderlight" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="lblInfosClient" layoutX="68.0" layoutY="47.0" maxWidth="1.7976931348623157E308" styleClass="bold" text="Numéro" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+            <Label fx:id="lblInfosClient" layoutX="68.0" layoutY="47.0" maxWidth="1.7976931348623157E308" styleClass="bold" text="Liste des emprunts" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
          </children>
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
